mule-user-guide/v/3.3/xmpp-transport-reference.adoc
=  XMPP传输参考

XMPP传输能够通过可扩展消息传递和呈现协议（又名Jabber）接收和发送Mule消息。

== 传输信息

[%header,cols="10,9,9,9,9,9,9,9,9,9,9"]
|===
一个|
运输

 为|
文件

 为|
入站

 为|
出站

 为|
请求

 为|
交易

 为|
流

 为|
重试

 为|
欧洲议会议员

 为|
默认MEP

 为|
Maven神器

| XMPP  | http://www.mulesoft.org/docs/site/current3/apidocs/org/mule/transport/xmpp/package-summary.html[的JavaDoc] http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_xmpp/namespace-overview.html[SchemaDoc]  | image:check.png[查]  | image:check.png[查]  | {{4} org.mule.transport：}  |   -    |   -    |   -    |单向请求响应 |单向{骡子运输XMPP

|===

*Legend*

*Transport*  - 交通工具的名称/协议+
  *Docs*  - 链接到transport +的JavaDoc和SchemaDoc
  *Inbound*  - 传输是否可以接收入站事件并可用于入站端点+
  *Outbound*  - 传输是否可以生成出站事件并与出站端点+一起使用
  *Request*  - 此端点是否可以通过请求调用直接查询（通过MuleClient或EventContext）+
  *Transactions*  - 交易是否受交通工具支持。支持事务的传输可以在本地或分布式两阶段提交（XA）事务中进行配置。 +
  *Streaming*  - 此传输是否可以处理输入流中传入的消息。这可以非常有效地处理大数据。有关更多信息，请参阅流式传输。 +
  *Retry*  - 此传输是否支持重试策略。请注意，所有传输都可以配置Retry策略，但只有在这里标记的传输才能被MuleSoft +官方支持
  *MEPs*  - 此传输+支持的消息交换模式
  *Default MEP*  - 使用此传输的端点的默认MEP不会明确配置MEP +
  *Maven Artifact*  - 组名称为 http://maven.apache.org/[Maven的]中此传输的工件名称

== 命名空间和语法

XML命名空间

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/xmpp
----

XML模式位置

[source, code, linenums]
----
http://www.mulesoft.org/schema/mule/xmpp/3.3/mule-xmpp.xsd
----

端点语法

原始网址. 
+
[source, code, linenums]
----
xmpp://MESSAGE/theUser@jabber.server.com
xmpp://CHAT/theUser@jabber.server.com
xmpp://GROUPCHAT/theGroupChat
----

.  XML中的传输特定端点
+
[source, xml, linenums]
----
<xmpp:inbound-endpoint type="MESSAGE" from="theUser@jabber.server.com"/>
<xmpp:outbound-endpoint type="MESSAGE" recipient="theUser@jabber.server.com"/>
 
<xmpp:inbound-endpoint type="CHAT" from="theUser@jabber.server.com"/>
<xmpp:outbound-endpoint type="CHAT" recipient="theUser@jabber.server.com"/>
 
<xmpp:inbound-endpoint type="GROUPCHAT" from="theGroupChat" nickname="muley"/>
<xmpp:outbound-endpoint type="GROUPCHAT" recipient="theGroupChat" nickname="muley"/>
----


连接器和端点语法

[source, xml, linenums]
----
<xmpp:connector name="xmpp" host="localhost" user="theUser" password="secret"/>
----

== 过滤器

有几个过滤器

http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/xmpp/filters/package-summary.html[org.mule.transport.xmpp.filters]

包过滤XMPP消息。 `AbstractXmppFilter`是一种抽象的过滤器适配器，可以将 http://www.igniterealtime.org/projects/smack/index.jsp[拍击]过滤器配置为Mule过滤器。以下过滤器类扩展了抽象过滤器：

*  `XmppAndFilter`
*  `XmppFromContainsFilter`
*  `XmppMessageTypeFilter`
*  `XmppNotFilter`
*  `XmppOrFilter`
*  `XmppPacketIDFilter`
*  `XmppPacketTypeFilter`
*  `XmppThreadFilter`
*  `XmppToContainsFilter`

== 特点

* 向个人Jabber用户发送和接收消息
* 发送和接收来自Jabber一对一聊天的消息
* 向/从Jabber多用户聊天发送和接收消息

== 用法

连接器的配置是强制性的，因为它代表了将要连接的Jabber服务器。因此，在此配置建立连接的所有信息，例如要联系的主机和要使用的用户凭证。

终端上的配置选项包括类型（无论是聊天，消息还是群聊）以及终端正在与之通话的Jabber ID。

XMPP传输不支持事务，因为XMPP协议不是事务性的。

== 示例配置

*Receive messages in a flow*

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:xmpp="http://www.mulesoft.org/schema/mule/xmpp"
    xsi:schemaLocation="
      http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.3/mule.xsd
      http://www.mulesoft.org/schema/mule/xmpp http://www.mulesoft.org/schema/mule/xmpp/3.3/mule-xmpp.xsd">
 
    <xmpp:connector name="xmppConnector" host="localhost" user="theUser" password="secret"/>
 
    <flow name="receiveMessage">
        <xmpp:inbound-endpoint type="MESSAGE" from="other@jabber.server.com"/>
        <component class="com.mycompany.mule.JabberMessageHandler"/>
    </flow>
</mule>
----

*Simple Jabber chat client*

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xmlns:spring="http://www.springframework.org/schema/beans"
      xmlns:xmpp="http://www.mulesoft.org/schema/mule/xmpp"
      xmlns:stdio="http://www.mulesoft.org/schema/mule/stdio"
      xsi:schemaLocation="
        http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
        http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/3.3/mule.xsd
        http://www.mulesoft.org/schema/mule/xmpp http://www.mulesoft.org/schema/mule/xmpp/3.3/mule-xmpp.xsd
        http://www.mulesoft.org/schema/mule/stdio http://www.mulesoft.org/schema/mule/stdio/3.3/mule-stdio.xsd">
 
    <xmpp:connector name="xmppConnector" host="localhost" user="theUser" password="secret"/>
 
    <flow name="stdio2xmpp">
        <stdio:inbound-endpoint system="IN"/>
        <xmpp:outbound-endpoint type="CHAT" recipient="otheruser@localhost"/>
    </flow>
 
    <flow name="xmpp2stdio">
        <xmpp:inbound-endpoint type="CHAT" from="otheruser@localhost"/>
        <xmpp:xmpp-to-object-transformer/>
        <stdio:outbound-endpoint system="OUT"/>
    </flow>
</mule>
----

*Note*：在此代码示例中，`spring-beans-current.xsd`是一个占位符。要找到正确的版本，请参阅 http://www.springframework.org/schema/beans/[http://www.springframework.org/schema/beans/]。

== 配置参考

=== 元素列表

=  XMPP传输

XMPP传输将Mule连接到XMPP（Jabber）服务器。

== 连接器

将Mule连接到XMPP（Jabber）服务器以通过网络发送或接收数据。

<connector...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|主机 |字符串 |否 |   | Jabber服务器的主机名或IP地址。
|端口 |端口号 |否 |   |连接的端口号。默认端口是5222。
| serviceName  |字符串 |否 |   |连接Jabber服务器时使用的服务名称。
|用户 |字符串 |否 |   |用于身份验证的用户名。
|密码 |字符串 |否 |   |用户进行身份验证的密码。
|资源 |字符串 |否 |   |地址的资源部分，例如user @ host / resource或domain / resource。
| createAccount  |布尔值 |否 |   |如果为true，则尝试在连接时使用用户名和密码创建帐户。默认为false。
|===

<connector...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 入站端点

此连接器从xmpp连接接收消息的端点。

<inbound-endpoint...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|收件人 |字符串 |否 |   |邮件预期收件人的Jabber ID，例如ross@myco.com。对于GROUPCHAT类型的端点，这是要加入的聊天的地址。
来自 |字符串 |的|否 |   |发送消息的用户。在GROUPCHAT类型端点中忽略。
|类型 |枚举 |否 |聊天 |要发送的Jabber消息的类型：MESSAGE，CHAT或GROUPCHAT。
|主题 |字符串 |否 |   |消息的主题（仅适用于type = MESSAGE端点）。
|线程 |字符串 |否 |   |消息所属的线程。
|昵称 |字符串 |否 |   |用户在群聊中的昵称。
|===

<inbound-endpoint...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 出站端点

此连接器发送消息的端点。

<outbound-endpoint...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|收件人 |字符串 |否 |   |邮件预期收件人的Jabber ID，例如ross@myco.com。对于GROUPCHAT类型的端点，这是要加入的聊天的地址。
来自 |字符串 |的|否 |   |发送消息的用户。在GROUPCHAT类型端点中忽略。
|类型 |枚举 |否 |聊天 |要发送的Jabber消息的类型：MESSAGE，CHAT或GROUPCHAT。
|主题 |字符串 |否 |   |消息的主题（仅适用于type = MESSAGE端点）。
|线程 |字符串 |否 |   |消息所属的线程。
|昵称 |字符串 |否 |   |用户在群聊中的昵称。
|===

<outbound-endpoint...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

== 端点

通过引用端点名称，可用于在配置中的其他位置构建入站或出站端点的端点"template"。

<endpoint...>的{​​{0}}属性

[%header,cols="5*"]
|===
| {名称{1}}输入 |必 |缺省 |说明
|收件人 |字符串 |否 |   |邮件预期收件人的Jabber ID，例如ross@myco.com。对于GROUPCHAT类型的端点，这是要加入的聊天的地址。
来自 |字符串 |的|否 |   |发送消息的用户。在GROUPCHAT类型端点中忽略。
|类型 |枚举 |否 |聊天 |要发送的Jabber消息的类型：MESSAGE，CHAT或GROUPCHAT。
|主题 |字符串 |否 |   |消息的主题（仅适用于type = MESSAGE端点）。
|线程 |字符串 |否 |   |消息所属的线程。
|昵称 |字符串 |否 |   |用户在群聊中的昵称。
|===

<endpoint...>的{​​{0}}子元素

[%header,cols="34,33,33"]
|===
| {名称{1}}基数 |说明
|===

=== 变压器

这些是这种运输特有的变压器。请注意，这些会在启动时自动添加到Mule注册表中。当进行自动转换时，这些将在搜索正确的变压器时包含在内。

[%header,cols="2*"]
|===
| {名称{1}}说明
| xmpp-to-object-transformer  | xmpp-to-object-transformer元素配置一个转换器，通过提取消息负载将XMPP消息转换为对象。
| object-to-xmpp-transformer  | object-to-xmpp-transformer元素配置一个将对象转换为XMPP消息的转换器。
|===

== 架构

已完成 http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_xmpp/namespace-overview.html[模式参考文档]。

==  Javadoc API参考

这个模块的Javadoc可以在下面找到：

http://www.mulesoft.org/docs/site/current/apidocs/org/mule/transport/xmpp/package-summary.html[Javadoc API参考]

== 的Maven

该传输是以下Maven模块的一部分（对于版本3.1）：

[source, xml, linenums]
----
<dependency>
  <groupId>org.mule.transports</groupId>
  <artifactId>mule-transport-xmpp</artifactId>
  <version>3.3.0</version>
</dependency>
----

== 最佳实践

将您的登录凭证放入属性文件中，而不是在配置中进行硬编码。这也允许您在开发，测试和生产系统之间使用不同的设置。

== 注意事项

目前的运输实施仅限于单向终点。支持请求 - 响应端点的逻辑目前尚未实现。
